# YACLib

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  README_8md.html  _config.yml  all_8hpp.html  all_8hpp.js  all_8hpp__dep__incl.map  all_8hpp__dep__incl.md5  all_8hpp__incl.map  all_8hpp__incl.md5  all_8hpp_source.html  all__tuple_8hpp.html  all__tuple_8hpp.js  all__tuple_8hpp__dep__incl.map  all__tuple_8hpp__dep__incl.md5  all__tuple_8hpp__incl.map  all__tuple_8hpp__incl.md5  all__tuple_8hpp_source.html  annotated.html  annotated_dup.js  any_8hpp.html  any_8hpp.js  any_8hpp__dep__incl.map  any_8hpp__dep__incl.md5  any_8hpp__incl.map  any_8hpp__incl.md5  any_8hpp_source.html  async_2future_8hpp.html  async_2future_8hpp.js  async_2future_8hpp__dep__incl.map  async_2future_8hpp__dep__incl.md5  async_2future_8hpp__incl.map  async_2future_8hpp__incl.md5  async_2future_8hpp_source.html  (+3406 more)
src/: CMakeLists.txt  config.hpp.in  log.cpp  log_config.cpp  log_error.cpp  log_info.cpp
src/algo/: CMakeLists.txt  base_core.cpp  drop_core.cpp  inline_core.cpp  one_shot_event.cpp  result_core.cpp  shared_core.cpp  unique_core.cpp  wait.cpp  wait_group.cpp  wait_impl.cpp
src/async/: CMakeLists.txt  base_core.cpp  core.cpp  future_impl.cpp  promise_impl.cpp  result_core.cpp  shared_future_impl.cpp  task_impl.cpp  wait_core.cpp  wait_impl.cpp
src/container/: CMakeLists.txt  intrusive_list.cpp  intrusive_list.hpp  mpsc_stack.hpp
src/coro/: CMakeLists.txt  await_awaiter.cpp  on.cpp  on_awaiter.cpp
src/coroutine/: CMakeLists.txt  async_mutex.cpp  await_awaiter.cpp  awaiter_deleters.cpp  handle_wrapper.cpp  on.cpp  on_awaiter.cpp  oneshot_event.cpp  switch.cpp  via.cpp  via_awaiter.cpp
src/coroutines/: CMakeLists.txt  coroutine.cpp  coroutine.h  coroutine_impl.cpp  coroutine_impl.hpp  standalone_coroutine.cpp  standalone_coroutine_factory.cpp  standalone_coroutine_factory.hpp  standalone_coroutine_impl.cpp  standalone_coroutine_impl.hpp
src/coroutines/context/: default_allocator.cpp  execution_context.cpp  execution_context.h  execution_context.hpp  machine_context.cpp  machine_context.h  machine_context.hpp  stack.h  stack_allocator.h  stack_builder.h
src/exe/: CMakeLists.txt  fair_thread_pool.cpp  golang_thread_pool.cpp  idle.hpp  inline.cpp  manual.cpp  parker.hpp  strand.cpp  thread_factory.cpp  thread_pool.cpp
src/executor/: CMakeLists.txt  async_mutex.cpp  common_thread_pool.cpp  inline.cpp  manual.cpp  serial.cpp  strand.cpp  thread_factory.cpp  thread_pool.cpp
src/fault/: CMakeLists.txt  atomic.cpp  condition_variable.cpp  config.cpp  fault_config.cpp  inject.cpp  injector.cpp  log_config.cpp  random_device.cpp  util.cpp  util.hpp
src/fault/antagonist/: inject_fault.cpp  yielder.cpp
src/fault/chrono/: steady_clock.cpp  system_clock.cpp
src/fault/condition/: condition_variable.cpp  fiber_condition_variable.cpp
src/fault/fiber/: bidirectional_intrusive_list.cpp  condition_variable.cpp  coroutine_base.cpp  fiber.cpp  fiber_base.cpp  mutex.cpp  queue.cpp  recursive_mutex.cpp  scheduler.cpp  shared_mutex.cpp  steady_clock.cpp  system_clock.cpp  thread.cpp  thread_local_proxy.cpp  wakeup_helper.cpp
src/fault/mutex/: fiber_mutex.cpp  mutex.cpp  recursive_mutex.cpp  recursive_timed_mutex.cpp  shared_mutex.cpp  shared_timed_mutex.cpp  timed_mutex.cpp
src/fault/random/: random_device.cpp
src/fault/thread/: fiber_threadlike.cpp  random_device.cpp  this_thread.cpp  thread.cpp
src/fault_injection/: CMakeLists.txt
src/fault_injection/antagonist/: inject_fault.cpp  yielder.cpp  yielder.hpp
src/fault_injection/chrono/: fiber_steady_clock.cpp  fiber_system_clock.cpp  other.cpp  other.hpp  steady_clock.cpp  steady_clock.hpp  system_clock.cpp  system_clock.hpp
src/fault_injection/mutex/: mutex.cpp  recursive_mutex.cpp  recursive_timed_mutex.cpp  shared_mutex.cpp  shared_timed_mutex.cpp  timed_mutex.cpp
src/fault_injection/random/: random_device.cpp  random_device.hpp
src/fault_injection/thread/: this_thread.cpp  this_thread.hpp  thread.cpp  thread.hpp
src/fiber/: CMakeLists.txt  coroutine.cpp  coroutine_base.cpp
src/fiber/context/: default_allocator.cpp  execution_context.cpp  setup_stack_x64.cpp
src/lazy/: CMakeLists.txt  task_impl.cpp
src/runtime/: CMakeLists.txt  fair_thread_pool.cpp  idle.hpp
src/std/: CMakeLists.txt
src/util/: CMakeLists.txt  atomic_event.cpp  global_queue.hpp  idle.hpp  intrusive_list.cpp  intrusive_list.hpp  metrics.hpp  michael_scott_queue.cpp  michael_scott_queue.hpp  mpsc_stack.cpp  mpsc_stack.hpp  mutex_event.cpp  node.cpp  result.cpp  work_stealing_queue.hpp  worker.hpp
test/: CMakeLists.txt  async_mutex.cpp  future.cpp  intrusive_ptr.cpp  main.cpp  result.cpp  serial.cpp  task.cpp  test.cpp  thread_factory.cpp  thread_pool.cpp  when_all.cpp
test/example/async/: simple.cpp  when_all.cpp  when_any.cpp
test/example/exe/: strand.cpp  thread_pool.cpp
test/example/executor/: serial.cpp  strand.cpp  thread_pool.cpp
test/unit/: log.cpp  not_implemented.cpp  task.cpp
test/unit/algo/: join.cpp  wait.cpp  wait_group.cpp  when.cpp  when_all.cpp  when_all_tuple.cpp  when_any.cpp
test/unit/async/: connect.cpp  core_size.cpp  dealloc_order.cpp  future.cpp  future_functor.cpp  future_inline.cpp  get.cpp  make_future.cpp  make_task.cpp  shared_core.cpp  shared_future.cpp  shared_promise.cpp  stress.cpp  task.cpp  when_all.cpp  when_any.cpp
test/unit/container/: intrusive_ptr.cpp
test/unit/coro/: async_mutex.cpp  async_mutex_stress.cpp  async_shared_mutex.cpp  await.cpp  await_group.cpp  await_group_stress.cpp  channel.cpp  future_coro_traits.cpp  on.cpp  stress.cpp
test/unit/coroutine/: async_mutex.cpp  async_mutex_stress.cpp  await.cpp  await_group.cpp  await_group_stress.cpp  dummy.cpp  future_coro_traits.cpp  on.cpp  stress.cpp  switch.cpp  via.cpp
test/unit/coroutines/: basic.cpp
test/unit/exe/: golang_thread_pool.cpp  strand.cpp  task.cpp  (+2 more)
test/util/: async_suite.hpp  cpu_time.hpp  error_code.hpp  error_suite.hpp  helpers.hpp  inline_helper.hpp  time.hpp  when_suite.hpp
(+593 files in other folders)
